--- a/ConsoleApplication2.vcxproj
+++ b/ConsoleApplication2.vcxproj
@@ -17,6 +17,7 @@
     <ProjectGuid>{3C7A99C1-C133-4361-AD4B-22871CA60E92}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>ConsoleApplication2</RootNamespace>
+    <ProjectName>2Multiplyers</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
